--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -75,6 +75,7 @@ table {
 ///////////////////////
 
 .top-bar {
+	min-height: 157px;
 	display: flex;
 	flex-direction: column;
 
@@ -333,6 +334,8 @@ table {
 ///////////////////////
 
 .contact {
+	margin-top: -88px;
+
 	&__us {
 		&-left {
 			margin-bottom: 5em;
@@ -347,14 +350,15 @@ table {
 				textarea {
 					width: 100%;
 					padding: 1em;
-					margin-bottom: 2em;
+					margin-bottom: 1em;
+					font-size: 2rem;
 					border: 1px solid rgba(0, 0, 0, 0.3);
 					border-top-right-radius: variables.$radius;
 
 					&::placeholder {
 						font-weight: bold;
 						letter-spacing: 1px;
-						font-size: 1.6rem;
+						font-size: 1.8rem;
 					}
 				}
 
